--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "normalize-url": "^2.0.1",
     "snekfetch": "^4.0.4",
     "weather-js": "^2.0.0",
+    "random-puppy": "^1.1.0",
     "weather.js": "^0.1.0"
   }
 }
