--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "discord.js": "^11.3.2",
     "normalize-url": "^2.0.1",
+    "superagent": "^3.8.3",
     "snekfetch": "^4.0.4",
     "weather-js": "^2.0.0",
     "random-puppy": "^1.1.0",
