--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.3.2",
+    "dateformat": "^3.0.3",
     "normalize-url": "^2.0.1",
     "superagent": "^3.8.3",
     "snekfetch": "^4.0.4",
