--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "discord.js": "^11.3.2",
     "dateformat": "^3.0.3",
     "normalize-url": "^2.0.1",
+    "moment": "^2.22.2",
     "superagent": "^3.8.3",
     "snekfetch": "^4.0.4",
     "weather-js": "^2.0.0",
