--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dateformat": "^3.0.3",
     "normalize-url": "^2.0.1",
     "moment": "^2.22.2",
+    "moment-duration-format": "^1.3.0",
     "superagent": "^3.8.3",
     "snekfetch": "^4.0.4",
     "weather-js": "^2.0.0",
