--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "animequote": "^1.1.1",
     "discord.js": "^11.3.2",
     "dateformat": "^3.0.3",
     "normalize-url": "^2.0.1",
     "moment": "^2.22.2",
     "kitsu": "^5.2.0",
+    "kitsu.js": "^2.0.0",
     "moment-duration-format": "^1.3.0",
     "superagent": "^3.8.3",
     "snekfetch": "^4.0.4",
