--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "kitsu": "^5.2.0",
     "kitsu.js": "^2.0.0",
     "moment-duration-format": "^1.3.0",
+    "pornsearch": "^2.4.2",
     "superagent": "^3.8.3",
     "snekfetch": "^4.0.4",
     "weather-js": "^2.0.0",
