--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dateformat": "^3.0.3",
     "normalize-url": "^2.0.1",
     "moment": "^2.22.2",
+    "fast-html-parser": "^1.0.1",
     "kitsu": "^5.2.0",
     "kitsu.js": "^2.0.0",
     "moment-duration-format": "^1.3.0",
