--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "animequote": "^1.1.1",
+    "currency-formatter": "^1.4.3",
     "discord.js": "^11.3.2",
     "dateformat": "^3.0.3",
     "normalize-url": "^2.0.1",
+    "quick.db": "^6.3.2",
+    "parse-ms": "2.0.0",
     "moment": "^2.22.2",
     "fast-html-parser": "^1.0.1",
     "kitsu": "^5.2.0",
