--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "dateformat": "^3.0.3",
     "normalize-url": "^2.0.1",
     "quick.db": "^6.3.2",
+    "canvas": "^1.6.11",
+    "jimp": "^0.2.28",
+    "ms": "^2.1.1",
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21",
     "parse-ms": "2.0.0",
     "moment": "^2.22.2",
     "fast-html-parser": "^1.0.1",
