--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "snekfetch": "^4.0.4",
     "weather-js": "^2.0.0",
     "random-puppy": "^1.1.0",
-    "weather.js": "^0.1.0"
+    "weather.js": "^0.1.0",
     "ytdl-core": "^0.21.1"
   }
 }
