--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "currency-formatter": "^1.4.3",
     "discord.js": "^11.3.2",
     "dateformat": "^3.0.3",
+    "ffmpeg": "0.0.4",
     "normalize-url": "^2.0.1",
     "quick.db": "^6.3.2",
     "canvas": "^1.6.11",
