--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "currency-formatter": "^1.4.3",
     "discord.js": "^11.3.2",
     "dateformat": "^3.0.3",
-    "ffmpeg": "0.0.4",
     "normalize-url": "^2.0.1",
     "quick.db": "^6.3.2",
     "canvas": "^1.6.11",
@@ -34,6 +33,7 @@
     "weather-js": "^2.0.0",
     "random-puppy": "^1.1.0",
     "weather.js": "^0.1.0",
-    "ytdl-core": "^0.21.1"
+    "ytdl-core": "^0.21.1",
+    "ffmpeg": "0.0.4"
   }
 }
