--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "random-puppy": "^1.1.0",
     "weather.js": "^0.1.0",
     "ytdl-core": "^0.21.1",
-    "twemoji": "^11.0.0",
+    "figlet": "^1.2.0",
     "ffmpeg": "0.0.4"
   }
 }
