--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.22.2",
     "fast-html-parser": "^1.0.1",
     "kitsu": "^5.2.0",
+    "booru": "^0.4.0",
     "idiotic-api": "^0.2.11",
     "kitsu.js": "^2.0.0",
     "moment-duration-format": "^1.3.0",
