--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "discord.js": "^11.3.2",
     "jimp": "^0.2.28",
     "dateformat": "^3.0.3",
+    "gifencoder": "^1.1.0",
     "normalize-url": "^2.0.1",
     "quick.db": "^6.3.2",
     "canvas": "^1.6.11",
