--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dateformat": "^3.0.3",
     "discord.js": "^11.3.2",
     "fast-html-parser": "^1.0.1",
-    "ffmpeg": "0.0.4",
+    "ffmpeg": "^0.0.4",
     "ffmpeg-binaries": "^3.2.2-3",
     "figlet": "^1.2.0",
     "gifencoder": "^1.1.0",
@@ -29,8 +29,8 @@
     "moment-timezone": "^0.5.21",
     "ms": "^2.1.1",
     "normalize-url": "^2.0.1",
-    "parse-ms": "2.0.0",
-    "relevant-urban": "2.0.0",
+    "parse-ms": "^2.0.0",
+    "relevant-urban": "^2.0.0",
     "pornsearch": "^2.4.2",
     "prism-media": "^0.3.1",
     "quick.db": "^6.3.2",
