--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ms": "^2.1.1",
     "normalize-url": "^2.0.1",
     "parse-ms": "^2.0.0",
+    "urban": "^0.3.1",
     "relevant-urban": "^2.0.0",
     "pornsearch": "^2.4.2",
     "prism-media": "^0.3.1",
